# toptop-music

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.dev.yml  plan.md
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  pyproject.toml  scraper_worker.py  test_tiktok_local.py
backend/alembic/: env.py
backend/alembic/versions/: 0145abf1052c_add_users_and_invite_codes.py  3514a6f0357f_initial.py  b544e163bb7d_add_sounds_favorites_playlists.py  d3b22cbfa4e1_add_refresh_tokens_and_audit_logs.py
backend/app/: config.py  database.py  main.py
backend/app/admin/: router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/core/: exceptions.py  logging.py  middleware.py  redis.py  security.py
backend/app/scraper/: downloader.py  fetcher.py  schemas.py  service.py
backend/app/sounds/: cache.py  models.py  playlist_router.py  repository.py  router.py  schemas.py  stream.py
backend/tests/: test_config.py  test_database.py  test_exceptions.py  test_health.py  test_health_ready.py  test_jwt.py  test_middleware.py  test_redis.py  test_security.py  test_structure.py
backend/tests/admin/: test_invite_codes.py  test_user_management.py
backend/tests/auth/: test_login.py  test_refresh_logout.py  test_service.py
backend/tests/scraper/: test_downloader.py  test_schemas.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json
nginx/: nginx.conf
(+55 files in other folders)
